--- a/GardeningServices/app/src/main/res/values/strings.xml
+++ b/GardeningServices/app/src/main/res/values/strings.xml
@@ -1,3 +1,15 @@
 <resources>
     <string name="app_name">Gardening Services</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="TitleWelcome1">Hello!</string>
+    <string name="TitleWelcome2">Start contributing to nature from today!</string>
+    <string name="Search">Search</string>
+    <string name="Category">Categories</string>
+    <string name="SeeAll">See all</string>
+    <string name="SpecialOffers">Special offers</string>
+    <string name="a"></string>
+    <string name="discount">Discount</string>
+    <string name="getDiscountUntil">Get discount until</string>
+    <string name="Services">Services</string>
 </resources>
