--- a/GardeningServices/app/src/main/res/values/strings.xml
+++ b/GardeningServices/app/src/main/res/values/strings.xml
@@ -12,4 +12,15 @@
     <string name="discount">Discount</string>
     <string name="getDiscountUntil">Get discount until</string>
     <string name="Services">Services</string>
+    <!--Descriptions-->
+    <string name="first_slide_desc">We wil help you to grow and organize
+your garden. </string>
+    <string name="second_slide_desc">Get your desired plants, tools, and services for
+gardening by staying home. </string>
+    <string name="third_slide_desc">The augmented reality feature will help you
+to see how a plant looks in your house. </string>
+    <!--Buttons-->
+    <string name="skip_btn"> Skip </string>
+    <string name="next_btn"> Next </string>
+    <string name="get_started"> Get started </string>
 </resources>
