Update Icon and HomeScreen

--- a/GardeningServices/app/src/main/res/values/strings.xml
+++ b/GardeningServices/app/src/main/res/values/strings.xml
@@ -13,11 +13,39 @@
     <string name="getDiscountUntil">Get discount until</string>
     <string name="Services">Services</string>
 
-<!--    category-->
+    <!--Descriptions-->
+    <string name="first_slide_desc">We wil help you to grow and organize your garden. </string>
+    <string name="second_slide_desc">Get your desired plants, tools, and services for gardening by staying home. </string>
+    <string name="third_slide_desc">The augmented reality feature will help you to see how a plant looks in your house. </string>
+    <!--Buttons-->
+    <string name="skip_btn"> Skip </string>
+    <string name="next_btn"> Next </string>
+    <string name="get_started"> Get started </string>
+    <string name="Full_Name">Full Name</string>
+    <string name="Your_Email">Your Email</string>
+    <string name="Password">Password</string>
+    <string name="Sign_Up">Sign Up</string>
+    <string name="Sign_In">Sign In</string>
+    <string name="Welcome_to_Plantify"> Welcome to Plantify</string>
+    <string name="Sign_in_to_continue">Sign in to continue</string>
+    <string name="Have_an_account">Have an account</string>
+    <string name="or">OR</string>
+    <string name="Register">Register</string>
+    <string name="Do_you_have_a_account">Do you have a account?</string>
+    <string name="Forgot_Password">Forgot Password? </string>
+    <string name="Login_with_Google">Login with Google</string>
+    <string name="Login_with_Facebook">Login with Facebook</string>
+    <string name="Password_Again">Password Again</string>
+    <string name="Create_an_new_account">Create an new account</string>
+    <!--    category-->
     <string name="flower">Flower</string>
     <string name="harvest">Fruit</string>
     <string name="vegetables">Vegetables</string>
     <string name="herbal">Herbal</string>
 
-
+    <!--    service-->
+    <string name="care">Monthly Care</string>
+    <string name="balcony">Balcony Setup</string>
+    <string name="decor">Office Decor</string>
+    <string name="organize">Organize Garden</string>
 </resources>
