--- a/GardeningServices/app/src/main/res/values/strings.xml
+++ b/GardeningServices/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="Let_get_started">Lets get started</string>
     <string name="getDiscountUntil">Get discount until</string>
     <string name="Services">Services</string>
+    <string name="Package"></string>
 
     <!--Descriptions-->
     <string name="first_slide_desc">We wil help you to grow and organize your garden. </string>
