--- a/GardeningServices/app/src/main/res/values/strings.xml
+++ b/GardeningServices/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="Let_get_started">Lets get started</string>
     <string name="getDiscountUntil">Get discount until</string>
     <string name="Services">Services</string>
-    <string name="Package"></string>
+    <string name="Package">Package</string>
 
     <!--Descriptions-->
     <string name="first_slide_desc">We wil help you to grow and organize your garden. </string>
@@ -23,7 +23,7 @@
     <string name="skip_btn"> Skip </string>
     <string name="next_btn"> Next </string>
     <string name="get_started"> Get started </string>
-    <string name="Full_Name">Full Name</string>
+    <string name="Full_Name">User name</string>
     <string name="Your_Email">Your Email</string>
     <string name="Password">Password</string>
     <string name="Sign_Up">Sign Up</string>
