--- a/GardeningServices/app/src/main/res/values/strings.xml
+++ b/GardeningServices/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="getDiscountUntil">Get discount until</string>
     <string name="Services">Services</string>
     <string name="Package">Package</string>
+    <string name="Plant_Detail">Plant Details</string>
 
     <!--Descriptions-->
     <string name="first_slide_desc">We wil help you to grow and organize your garden. </string>
