--- a/GardeningServices/app/src/main/res/values/strings.xml
+++ b/GardeningServices/app/src/main/res/values/strings.xml
@@ -62,4 +62,6 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 
     <string name="sale">Flash Sales</string>
+<!--    cart-->
+    <string name="titleCart">Cart</string>
 </resources>
