--- a/GardeningServices/app/src/main/res/values/strings.xml
+++ b/GardeningServices/app/src/main/res/values/strings.xml
@@ -47,12 +47,18 @@
     <string name="herbal">Herbal</string>
 
     <!--    service-->
+    <string name="Detail_services">Service Detail</string>
     <string name="care">Monthly Care</string>
     <string name="balcony">Balcony Setup</string>
     <string name="decor">Office Decor</string>
+    <string name="Stock_in">Stock in</string>
+    <string name="name_service">Service Name</string>
+    <string name="price_service">Price </string>
     <string name="organize">Organize Garden</string>
     <string name="title_activity_sell_all_category">SellAllCategoryActivity</string>
     <!-- Strings used for fragments for navigation -->
+    <string name="buy_now">Buy now </string>
+    <string name="add_to_cart">Add to cart </string>
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
     <string name="next">Next</string>
@@ -60,6 +66,6 @@
 
     <string name="hello_first_fragment">Hello first fragment</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-
+    <string name="profile"> Profile </string>
     <string name="sale">Flash Sales</string>
 </resources>
