Update product detail

--- a/GardeningServices/app/src/main/res/values/strings.xml
+++ b/GardeningServices/app/src/main/res/values/strings.xml
@@ -84,4 +84,6 @@
     </string-array>
     <!--    check out shipment-->
     <string name="titleCheckOutShipment">Ship to</string>
+
+    <string name="product">Products</string>
 </resources>
