--- a/GardeningServices/app/src/main/res/values/strings.xml
+++ b/GardeningServices/app/src/main/res/values/strings.xml
@@ -110,4 +110,18 @@
     <string name="orderShippingProvince">Province</string>
     <string name="orderShippingDistrict">District</string>
     <string name="orderShippingWard">Ward</string>
+    <!--    Address-->
+    <string name="add_address">Add New Address</string>
+    <string name="fullName">Full Name</string>
+    <string name="create_address">Create New Address</string>
+    <string name="title_address_management">Address Management</string>
+    <string name="Province">Province</string>
+    <string name="District">District</string>
+    <string name="phoneNumber">Phone Number</string>
+    <string name="ward">Ward</string>
+    <string name="save_new_address">Save New Address</string>
+    <string name="detailAddress">Address Details</string>
+    <string name="editAddress">Edit Address</string>
+    <string name="saveAddress">Save Address</string>
+    <string name="nextStep">Next</string>
 </resources>
