--- a/GardeningServices/app/src/main/res/values/strings.xml
+++ b/GardeningServices/app/src/main/res/values/strings.xml
@@ -85,7 +85,7 @@
         <item>2</item>
         <item>3</item>
         <item>4</item>
-        <item>5(Max)</item>
+        <item>5</item>
     </string-array>
     <!--    check out shipment-->
     <string name="titleCheckOutShipment">Ship to</string>
